# Fast_api_mail

./: pyproject.toml
